# Aind.Experiment.MotorObservatory-Fip

./: .gitmodules  README.md  main.py  pyproject.toml
.github/workflows/: submodule-update.yml
examples/: clabe.yml  example-fip.py  example-just-frames.py
scripts/: deploy.ps1  serve.cmd
